Archive2/e4/5cdcb7aefdcf8c/output
main.cpp:6:5: error: static_assert failed "int is not convertible to void"
    static_assert(std::is_convertible<int, void>{}, "int is not convertible to void");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
